# PyFiberModes

./: .buildinfo  .coveragerc  .gitignore  MANIFEST.in  README.md  README.rst  code.html  data.json  genindex.html  index.html  meta.yaml  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  sg_execution_times.html  version_switcher.json
.github/workflows/: deploy_workflow.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
PyFiberModes/: __future__.py  _version.py  coordinates.py  factory.py  fiber.py  field.py  functions.py  fundamentals.py  mode.py  stepindex.py
PyFiberModes/fiber_geometry/: stepindex.py
PyFiberModes/solver/: base_solver.py  mlsif.py  solver.py  ssif.py  tlsif.py
_downloads/0c3fa387c8a462bc3ee0b44ae8fb627f/: plot_smf28.ipynb
_downloads/1d34d9775f12bffc190a4667a76fc23d/: plot_dispersion.py
_downloads/1f9a9e92bc61585d4386680245c27062/: plot_smf28_group_index_vs_wavelength.ipynb
_downloads/20510d121a2466529e63db646458d59d/: plot_fiber_LP_modes.ipynb
_downloads/3b11ed47d149b51b4da1c9f3e9755227/: plot_fiber_LP_modes.py
_downloads/69531ff0e591173afac5a6205e566cb0/: plot_mode_field_2.ipynb
_downloads/6be22241f9d12dc18fbdb4e9a6592e52/: plot_effective_index.py
_downloads/8e36ca4302a16bccacb22b6080cbc7fc/: plot_effective_index.ipynb
_downloads/a7cc8ff8b0cc772e73c2a530efc61d19/: plot_dispersion.ipynb
_downloads/b5f71ebdb63df427a8c0b55b5e2d2c40/: plot_group_index.ipynb
_downloads/e0ff10f53a175d8fa385e155e964392b/: plot_U_vs_V.ipynb
_sources/: sg_execution_times.rst.txt
_sources/gallery/: plot_DCF_fields.rst.txt  plot_comparison_solvers.rst.txt  plot_mode_field_2.rst.txt  plot_smf28.rst.txt  sg_execution_times.rst.txt
docs/examples/: plot_U_vs_V.py  plot_comparison_solvers.py  plot_dispersion.py  plot_effective_index.py  plot_fiber_LP_modes.py  plot_group_index.py  plot_mode_field.py  plot_mode_field_1.py  plot_mode_field_2.py  plot_neff_tapered_fiber.py  plot_smf28.py
docs/latest/: .buildinfo  code.html  examples.html  genindex.html  index.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
docs/source/: code.rst  conf.py
docs/v0.10.0/: .buildinfo  code.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
docs/v0.4.0/: code.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
docs/v0.5.0/: code.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
docs/v0.5.3/: code.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
docs/v0.5.5/: code.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
docs/v0.5.7/: code.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
docs/v0.5.8/: code.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
docs/v0.5.9.0/: code.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
docs/v0.5.9.10/: code.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
docs/v0.5.9.12/: code.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
docs/v0.5.9.2/: code.html  genindex.html  (+6 more)
gallery/: index.html  plot_DCF_fields.html  plot_U_vs_V.html  plot_comparison_solvers.html  plot_dispersion.html  plot_effective_index.html  plot_fiber_LP_modes.html  plot_group_index.html  plot_mode_field.html  plot_mode_field_1.html  plot_mode_field_2.html  plot_neff_tapered_fiber.html  plot_smf28.html  plot_smf28_dispersion_vs_wavelength.html  plot_smf28_group_index_vs_wavelength.html  sg_execution_times.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1c7fe2e2ee1b4410___init___py.html  z_1c7fe2e2ee1b4410_neff_py.html  z_2798809ee2ca980f___init___py.html  z_2798809ee2ca980f_cutoff_py.html  z_44224eb71edb1d68___init___py.html  z_44224eb71edb1d68_cutoff_py.html  z_44224eb71edb1d68_neff_py.html  z_c93e48b86631ccc6___future___py.html  z_c93e48b86631ccc6___init___py.html  z_c93e48b86631ccc6__version_py.html  z_c93e48b86631ccc6_coordinates_py.html  z_c93e48b86631ccc6_factory_py.html  z_c93e48b86631ccc6_fiber_py.html  z_c93e48b86631ccc6_field_py.html  z_c93e48b86631ccc6_fundamentals_py.html  z_c93e48b86631ccc6_loader_py.html  z_c93e48b86631ccc6_mode_instances_py.html  z_c93e48b86631ccc6_mode_py.html  z_c93e48b86631ccc6_source_py.html  z_c93e48b86631ccc6_stepindex_py.html  z_c93e48b86631ccc6_wavelength_py.html  z_e0de0cc549b1b3c5_directories_py.html  z_e0de0cc549b1b3c5_utils_py.html  z_f7d5cd7a1c475ca0___init___py.html  z_f7d5cd7a1c475ca0_base_solver_py.html
plots/: bures_4_2_8.py  chareq.py  fields.py  material.py  mlsif.py  neff.py  sio2geo2.py  ssif.py
requirements/: requirements-development.txt  requirements-documentation.txt  requirements.txt
tests/: test_api.py  test_dummy.py  test_field.py  test_functions.py  test_mode.py  test_slrc.py  test_validation.py  test_wavelength.py  validation.py
(+1370 files in other folders)
