[metadata]
name = PyFiberModes
description = A package for light propagation in fiber optics.
version = file: PyFiberModes/VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Martin Poinsinet de Sivry
author_email = Martin.poinsinet.de.sivry@gmail.com
platforms = unix, linux, osx, windows
url = https://github.com/MartinPdeS/PyFiberModes
license = MIT
license_files = LICENSE
readme = README.rst
classifiers =
        Development Status :: 3 - Alpha
        Intended Audience :: Science/Research
        Intended Audience :: Telecommunications Industry
        License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
        Operating System :: OS Independent
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Topic :: Scientific/Engineering :: Physics

[options]
include_package_data = True
packages = find:
python_requires >= 3.10

setup_requires =
        setuptools
        wheel

install_requires =
        MPSPlots
        MPSTools
        numpy
        scipy

[sdist]
formats = zip, gztar

[options.extras_require]
development =
        jinja2==3.1.2
        numpydoc==1.5.0
        sphinx>5.1.1
        sphinx-gallery==0.11.1
        sphinx-rtd-theme==1.0.0
        numpydoc
        pydata-sphinx-theme
        pytest>=0.6
        pytest-cov>=2.0
        pytest-json-report
        mypy>=0.910
        flake8>=3.9
        tox>=3.24
        coverage


documentation =
        jinja2==3.1.2
        numpydoc==1.5.0
        sphinx>5.1.1
        sphinx-gallery==0.11.1
        sphinx-rtd-theme==1.0.0
        numpydoc
        pydata-sphinx-theme

testing =
        pytest>=0.6
        pytest-cov>=2.0
        pytest-json-report
        mypy>=0.910
        flake8>=3.9
        tox>=3.24
        coverage


[flake8]
max-line-length = 200
per-file-ignores = __init__.py:F401
ignore =
        W605

[options.packages.find]
exclude =
        plots
        scripts
        tests

include =
        PyFiberModes