[metadata]
name = PyFiberModes
description = A package for light propagation in fiber optics.
version = file: PyFiberModes/VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Martin Poinsinet de Sivry
author_email = Martin.poinsinet.de.sivry@gmail.com
platforms = unix, linux, osx, windows
url = https://github.com/MartinPdeS/PyFiberModes
license = MIT
license_files = LICENSE
readme = README.rst
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Physics

[options]
include_package_data = True
packages = find:
python_requires >= 3.11

setup_requires =
    setuptools>=69.0.0

install_requires =
    numpy>=1.26.0
    MPSPlots==1.3.19
    PyFinitDiff==1.1.2
    MPSTools
    scipy==1.11.3

[options.extras_require]
documentation =
    numpydoc==1.6.0
    sphinx>=5.1.1
    sphinx-gallery==0.15.0
    sphinx-rtd-theme==2.0.0
    pydata-sphinx-theme==0.14.1

testing =
    pytest>=0.6
    pytest-cov>=2.0
    pytest-json-report==1.5.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    coverage==6.5.0

[sdist]
formats = zip, gztar

[flake8]
max-line-length = 200
per-file-ignores = __init__.py:F401
ignore =
    W605

[tool:pytest]
minversion = 6.0
addopts = -ra -q -v --cache-clear
testpaths = tests

[options.packages.find]
exclude =
    plots
    scripts
    tests

[coverage:run]
source = PyFiberModes
